Fed press releases

--- a/BLS.ipynb
+++ b/BLS.ipynb
@@ -10,10 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cb93db93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: feedparser in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from -r requirements.txt (line 1)) (6.0.12)\n",
+      "Requirement already satisfied: requests in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from -r requirements.txt (line 2)) (2.32.5)\n",
+      "Collecting beautifulsoup4 (from -r requirements.txt (line 3))\n",
+      "  Downloading beautifulsoup4-4.14.3-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: sgmllib3k in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from feedparser->-r requirements.txt (line 1)) (1.0.0)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from requests->-r requirements.txt (line 2)) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from requests->-r requirements.txt (line 2)) (3.11)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from requests->-r requirements.txt (line 2)) (2.6.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from requests->-r requirements.txt (line 2)) (2026.1.4)\n",
+      "Collecting soupsieve>=1.6.1 (from beautifulsoup4->-r requirements.txt (line 3))\n",
+      "  Downloading soupsieve-2.8.1-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\regin\\anaconda3\\envs\\credo\\lib\\site-packages (from beautifulsoup4->-r requirements.txt (line 3)) (4.15.0)\n",
+      "Downloading beautifulsoup4-4.14.3-py3-none-any.whl (107 kB)\n",
+      "Downloading soupsieve-2.8.1-py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: soupsieve, beautifulsoup4\n",
+      "\n",
+      "   -------------------- ------------------- 1/2 [beautifulsoup4]\n",
+      "   ---------------------------------------- 2/2 [beautifulsoup4]\n",
+      "\n",
+      "Successfully installed beautifulsoup4-4.14.3 soupsieve-2.8.1\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -r requirements.txt"
    ]
@@ -46,6 +73,183 @@
     "    summary = entry.summary        # HTML summary of the release\n",
     "    print(f\"Release: {title}, Date: {published}\")\n",
     "    # Here you could compare published date with last seen date to identify new items\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b6947d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import feedparser\n",
+    "\n",
+    "URL = \"https://www.bls.gov/feed/bls_latest.rss\"\n",
+    "\n",
+    "headers = {\n",
+    "    # A boring, common UA helps a lot vs default python-requests signatures\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 \"\n",
+    "                  \"(KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36\",\n",
+    "    \"Accept\": \"application/rss+xml, application/xml;q=0.9, */*;q=0.8\",\n",
+    "    \"Accept-Language\": \"en-US,en;q=0.9\",\n",
+    "    \"Referer\": \"https://www.bls.gov/\",\n",
+    "}\n",
+    "\n",
+    "resp = requests.get(URL, headers=headers, timeout=20)\n",
+    "resp.raise_for_status()  # will raise on 403\n",
+    "\n",
+    "feed = feedparser.parse(resp.content)\n",
+    "print(\"bozo:\", feed.bozo)\n",
+    "print(\"entries:\", len(feed.entries))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed88e6ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fec98ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urlparse, parse_qs\n",
+    "\n",
+    "def parse_latest_numbers_summary(html: str):\n",
+    "    \"\"\"\n",
+    "    Parse the latest numbers summary from the BLS RSS feed.\n",
+    "    Args:\n",
+    "        html: The HTML content of the latest numbers summary.\n",
+    "    Returns:\n",
+    "        A list of dictionaries, each containing the following keys:\n",
+    "            - label: The label of the indicator.\n",
+    "            - latest_text: The latest text of the indicator.\n",
+    "            - data_definition: The data definition of the indicator.\n",
+    "            - series_id: The series ID of the indicator.\n",
+    "            - news_release_url: The URL of the news release.\n",
+    "            - historical_url: The URL of the historical data.\n",
+    "\n",
+    "    Usage:\n",
+    "        ```python\n",
+    "        html = feed['entries'][0]['summary']\n",
+    "        data = parse_latest_numbers_summary(html)\n",
+    "        ```\n",
+    "    \"\"\"\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "\n",
+    "    out = []\n",
+    "    # Each indicator appears to be in its own <p> block\n",
+    "    for p in soup.find_all(\"p\"):\n",
+    "        # label is the text up to \":\" usually\n",
+    "        raw_text = p.get_text(\" \", strip=True)\n",
+    "        if \":\" not in raw_text:\n",
+    "            continue\n",
+    "        label = raw_text.split(\":\", 1)[0].strip()\n",
+    "\n",
+    "        data_span = p.find(\"span\", class_=\"data\")\n",
+    "        latest_text = data_span.get_text(\" \", strip=True) if data_span else None\n",
+    "        title_attr = data_span.get(\"title\") if data_span else None\n",
+    "\n",
+    "        news_a = p.find(\"a\", string=lambda s: s and \"News Release\" in s)\n",
+    "        news_url = news_a[\"href\"] if news_a else None\n",
+    "\n",
+    "        hist_a = p.find(\"a\", string=lambda s: s and \"Historical Data\" in s)\n",
+    "        hist_url = hist_a[\"href\"] if hist_a else None\n",
+    "\n",
+    "        series_id = None\n",
+    "        if hist_url:\n",
+    "            qs = parse_qs(urlparse(hist_url).query)\n",
+    "            series_id = (qs.get(\"series_id\") or [None])[0]\n",
+    "\n",
+    "        if latest_text or series_id or news_url:\n",
+    "            out.append({\n",
+    "                \"label\": label,\n",
+    "                \"latest_text\": latest_text,\n",
+    "                \"data_definition\": title_attr,   # what the number means\n",
+    "                \"series_id\": series_id,\n",
+    "                \"news_release_url\": news_url,\n",
+    "                \"historical_url\": hist_url,\n",
+    "            })\n",
+    "\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "96544614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'Unemployment Rate',\n",
+       "  'latest_text': '4.4%  in Dec 2025',\n",
+       "  'data_definition': 'In percent, seasonally adjusted',\n",
+       "  'series_id': 'LNS14000000',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/empsit.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=LNS14000000'},\n",
+       " {'label': 'Payroll Employment',\n",
+       "  'latest_text': '+50,000(p)  in Dec 2025',\n",
+       "  'data_definition': 'Number of jobs, 1-month net change, seasonally adjusted',\n",
+       "  'series_id': 'CES0000000001',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/empsit.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=CES0000000001&output_view=net_1mth'},\n",
+       " {'label': 'Average Hourly Earnings',\n",
+       "  'latest_text': '+$0.12(p)  in Dec 2025',\n",
+       "  'data_definition': 'For all employees, seasonally adjusted',\n",
+       "  'series_id': 'CES0500000003',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/empsit.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=CES0500000003&output_view=net_1mth'},\n",
+       " {'label': 'Producer Price Index - Final Demand',\n",
+       "  'latest_text': '+0.3%(p)  in Sep 2025',\n",
+       "  'data_definition': 'Final Demand, 1-month percent change, seasonally adjusted',\n",
+       "  'series_id': 'WPSFD4',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/ppi.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=WPSFD4&output_view=pct_1mth'},\n",
+       " {'label': 'Employment Cost Index (ECI)',\n",
+       "  'latest_text': '+0.8%  in 3rd Qtr of 2025',\n",
+       "  'data_definition': 'Compensation, all civilian workers, quarterly percent change, seasonally adjusted',\n",
+       "  'series_id': 'CIS1010000000000Q',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/eci.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=CIS1010000000000Q'},\n",
+       " {'label': 'Productivity',\n",
+       "  'latest_text': '+4.9%  in 3rd Qtr of 2025',\n",
+       "  'data_definition': 'Output per hour, nonfarm business, percent change from previous quarter at annual rate, seasonally adjusted',\n",
+       "  'series_id': 'PRS85006092',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/prod2.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=PRS85006092'},\n",
+       " {'label': 'U.S. Import Price Index',\n",
+       "  'latest_text': 'unchanged  in Sep 2025',\n",
+       "  'data_definition': 'All imports, 1-month percent change, not seasonally adjusted',\n",
+       "  'series_id': 'EIUIR',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/ximpim.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=EIUIR&output_view=pct_1mth'},\n",
+       " {'label': 'U.S. Export Price Index',\n",
+       "  'latest_text': 'unchanged  in Sep 2025',\n",
+       "  'data_definition': 'All exports, 1-month percent change, not seasonally adjusted',\n",
+       "  'series_id': 'EIUIQ',\n",
+       "  'news_release_url': 'https://www.bls.gov/news.release/ximpim.toc.htm',\n",
+       "  'historical_url': 'https://data.bls.gov/pdq/SurveyOutputServlet?data_tool=latest_numbers&series_id=EIUIQ&output_view=pct_1mth'}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# parse_latest_numbers_summary(feed)\n",
+    "parse_latest_numbers_summary(feed['entries'][0]['summary'])"
    ]
   },
   {
